--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   },
   "dependencies": {
     "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
-    "mongoose": "^4.1.5",
-    "morgan": "~1.6.1"
+    "method-override": "^2.3.10",
+    "mysql2": "^1.5.2",
+    "sequelize": "^4.37.1"
   },
   "devDependencies": {
     "chai": "^3.2.0",
