--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./server/app"
+    "start": "node ./app",
+    "test": "mocha --timeout 10000"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
